--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
     "name": "Happy",
-    "slug": "mobile",
-    "version": "1.0.0",
+    "slug": "happy-mobile",
+    "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "cover",
-      "backgroundColor": "#06C4C8"
+      "backgroundColor": "#15C3D6"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -21,12 +21,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#15C3D6"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      },
+      "package": "com.brunoinx.happymobile"
     }
   }
 }
